mobile overflow fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+}
+
 .navbar{
 	padding: 10px;
 	font-size: 1.2em;
